# Python_piscine_42

./: .gitignore  README.md  scope_mysteries.py  space_crew.py
M0_Python/ex2/: ft_harvest_total.py
M0_Python/ex4/: ft_water_reminder.py
M0_Python/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
M0_Python/ex6/: ft_garden_summary.py
M0_Python/ex7/: ft_seed_inventory.py
M10_Python/ex2/: scope_mysteries.py
M10_Python/ex3/: functools_artifacts.py
M10_Python/ex4/: decorator_mastery.py
M1_Python/ex0/: ft_garden_intro.py
M1_Python/ex1/: ft_garden_data.py
M1_Python/ex2/: ft_plant_growth.py
M1_Python/ex3/: ft_plant_factory.py
M1_Python/ex4/: ft_garden_security.py
M1_Python/ex5/: ft_plant_types.py
M1_Python/ex6/: ft_garden_analytics.py
M2_Python/ex0/: ft_first_exception.py
M2_Python/ex1/: ft_different_errors.py
M2_Python/ex2/: ft_custom_errors.py
M2_Python/ex3/: ft_finally_block.py
M2_Python/ex4/: ft_raise_errors.py
M6_Python/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
M7_Python/ex0/: Card.py  (+3 more)
M8_Python/ex01/: loading.py  pyproject.toml
ex0/: ft_command_quest.py  lambda_spells.py  space_station.py
ex01/: alien_contact.py  loading.py
ex02/: oracle.py
ex1/: alien_contact.py  ft_score_analytics.py  higher_magic.py
ex2/: ft_coordinate_system.py  scope_mysteries.py  space_crew.py
ex3/: ft_achievement_tracker.py  functools_artifacts.py
ex4/: TournamentCard.py  decorator_mastery.py  ft_inventory_system.py
ex5/: ft_data_stream.py
ex6/: ft_analytics_dashboard.py
(+34 files in other folders)
