[project]
name = "ex01"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false